[package]
name = "ibe"
version = "0.1.0"
edition = "2021"
description = "Boneh-Franklin Identity-Based Encryption (BasicIdent + FullIdent) over BN254"
license = "MIT OR Apache-2.0"

[dependencies]
ark-bn254 = "0.5"
ark-ec = "0.5"
ark-ff = "0.5"
ark-serialize = { version = "0.5", features = ["derive"] }
ark-std = "0.5"
sha2 = "0.10"
digest = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
rand_chacha = "0.3"
hex = "0.4"
